name:                yesod-goodies
version:             0.1
description:         A collection of various small helpers useful in any yesod application.
synopsis:            A collection of various small helpers useful in any yesod application.
homepage:            http://github.com/pbrisbin/yesod-goodies
license:             BSD3
license-file:        LICENSE
author:              Patrick Brisbin
maintainer:          me@pbrisbin.com
category:            Web, Yesod
build-type:          Simple
cabal-version:       >=1.6

library
  exposed-modules: Yesod.Goodies

  build-depends: base            >= 4   && < 5
               , gravatar        >= 0.4 && < 0.5
               , yesod-markdown  >= 0.3 && < 0.4
               , yesod-paginate  >= 0.2 && < 0.3
               , friendly-time   >= 0.1 && < 0.2
               , shorten-strings >= 0.1 && < 0.2
               , simple-search   >= 0.1 && < 0.2
               , yesod-links     >= 0.1 && < 0.2

  ghc-options: -Wall
  
source-repository head
  type:         git
  location:     git://github.com/pbrisbin/yesod-goodies.git
