name:                shorten-strings
version:             0.1
description:         A yesod goody, shorten strings
synopsis:            Shorten a variety of string-like types adding ellipsis
homepage:            http://github.com/pbrisbin/yesod-goodies/shorten-strings
license:             BSD3
license-file:        LICENSE
author:              Patrick Brisbin
maintainer:          me@pbrisbin.com
category:            Web, Yesod
build-type:          Simple
cabal-version:       >=1.6

library
  exposed-modules: Data.Shorten

  build-depends: base >= 4    && < 5
               , text >= 0.11 && < 0.12

  ghc-options: -Wall
  
source-repository head
  type:         git
  location:     git://github.com/pbrisbin/yesod-goodies.git
