name:                yesod-markdown
version:             0.3
description:         A yesod goody, yesod markdown
synopsis:            A subset of pandoc functionality usef for markdown processing in yesod
homepage:            http://github.com/pbrisbin/yesod-goodies/yesod-markdown
license:             BSD3
license-file:        LICENSE
author:              Patrick Brisbin
maintainer:          me@pbrisbin.com
category:            Web, Yesod
build-type:          Simple
cabal-version:       >=1.6

library
  exposed-modules: Yesod.Markdown

  build-depends: base            >= 4     && < 5
               , text            >= 0.11  && < 0.12
               , shorten-strings >= 0.1 && < 0.2
               , pandoc          >= 1.8.1 && < 1.9
               , yesod           >= 0.9   && < 1.0
               , yesod-form      >= 0.3   && < 0.4
               , blaze-html      >= 0.4   && < 0.5
               , directory

  ghc-options: -Wall
  
source-repository head
  type:         git
  location:     git://github.com/pbrisbin/yesod-goodies.git
