name:                yesod-paginate
version:             0.2
description:         A yesod goody, yesod paginate
synopsis:            Paginate a list showing a per-item widget and links to other pages
homepage:            http://github.com/pbrisbin/yesod-goodies/yesod-paginate
license:             BSD3
license-file:        LICENSE
author:              Patrick Brisbin
maintainer:          me@pbrisbin.com
category:            Web, Yesod
build-type:          Simple
cabal-version:       >=1.6

library
  exposed-modules: Yesod.Paginate

  build-depends: base  >= 4    && < 5
               , text  >= 0.11 && < 0.12
               , yesod >= 0.9  && < 1.0

  ghc-options: -Wall
  
source-repository head
  type:         git
  location:     git://github.com/pbrisbin/yesod-goodies.git
